added references in README and in comments

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# time constants\n",
+    "# time constants: Postnova et al. 2018 - Table 1\n",
     "tau_v = 50 #s\n",
     "tau_m = tau_v\n",
     "tau_H = 59*3600 #s\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# coupling strengths constants\n",
+    "# coupling strengths constants: Postnova et al. 2018 - Table 1\n",
     "nu_vm = -2.1 #mV\n",
     "nu_mv = -1.8 #mV\n",
     "nu_Hm = 4.57 #s\n",
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# external neuronal drives constants\n",
+    "# external neuronal drives constants: Postnova et al. 2018 - Table 1\n",
     "A_v = -10.3 #mV\n",
     "D_m = 1.3 #mV\n",
     "A_m = D_m"
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# circadian constants\n",
+    "# circadian constants: Postnova et al. 2018 - Table 1\n",
     "gamma = 0.13\n",
     "delta = 24*3600/0.99729 #s\n",
     "beta = 0.007/60 #sˆ-1"
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nonphotic drive constant\n",
+    "# nonphotic drive constant: Postnova et al. 2018 - Table 1\n",
     "r = 10"
    ]
   },
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# photic drive constants\n",
+    "# photic drive constants: Postnova et al. 2018 - Table 1\n",
     "epsilon = 0.4\n",
     "I_0 = 100 #lx\n",
     "I_1 = 9500 #lx\n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# firing rate constants\n",
+    "# firing rate constants: Postnova et al. 2018 - Table 1\n",
     "Q_max = 100 #sˆ-1\n",
     "theta = 10 #mV\n",
     "sigma = 3 #mV #prime???"
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# wake effort constants\n",
+    "# wake effort constants: Postnova et al. 2018 - Table 1\n",
     "V_WE = -0.07 #mv\n",
     "V_th = -2 #mV\n",
     "F_W = 1 # if forced wake, 0 otherwise #????"
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# circadian phase constants\n",
+    "# circadian phase constants: Postnova et al. 2018 - Table 1\n",
     "MELpeak_t_0 = 0.7*3600 #s\n",
     "CBTmin_t_0 = 2.7*3600 #s"
    ]
@@ -134,7 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# KSS\n",
+    "# KSS: Karolinska Sleepiness Scale\n",
+    "# Ranges from 1 = \"Extremely alert\" to 9 = \"Extremely sleepy, fighting sleep.\"\n",
+    "# KSS default parameters: Postnova et al. 2018 - Table 3\n",
     "Theta_0_KSS = -24.34\n",
     "Theta_H_KSS = 2.28\n",
     "Theta_C_KSS = -1.74"
@@ -147,7 +149,7 @@
    "outputs": [],
    "source": [
     "# state function\n",
-    "def state(V_m):\n",
+    "def state(V_m): # Postnova et al. 2018 - Table 1, Equation 15\n",
     "    if (V_m > V_th):\n",
     "        S = 1\n",
     "    else:\n",
@@ -161,9 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def alpha(I, S = 1):\n",
-    "    I = I*S\n",
-    "    alpha = ((alpha_0*I)/(I+I_0))*sqrt(I/I_0)\n",
+    "def alpha(I, S = 1): \n",
+    "    I = I*S # Postnova et al. 2018 - Table 1, Equation 14\n",
+    "    alpha = ((alpha_0*I)/(I+I_0))*sqrt(I/I_0) # Postnova et al. 2018 - Table 1, Equation 13\n",
     "    return alpha"
    ]
   },
@@ -175,7 +177,7 @@
    "source": [
     "# photic drive to the circadian function\n",
     "def photic_drive(X, Y, P, I, S = 1):\n",
-    "    D_p = alpha(I,S)*(1-P)*(1-epsilon*X)*(1-epsilon*Y)\n",
+    "    D_p = alpha(I,S)*(1-P)*(1-epsilon*X)*(1-epsilon*Y) # Postnova et al. 2018 - Table 1, Equation 12\n",
     "    return D_p"
    ]
   },
@@ -187,7 +189,7 @@
    "source": [
     "# nonphotic drive to the circadian function\n",
     "def nonphotic_drive(X, S = 1):\n",
-    "    D_n = (S-(2/3))*(1-tanh(r*X))\n",
+    "    D_n = (S-(2/3))*(1-tanh(r*X)) # Postnova et al. 2018 - Table 1, Equation 11\n",
     "    return D_n"
    ]
   },
@@ -199,7 +201,7 @@
    "source": [
     "# mean population firing rate function\n",
     "def mean_pop_firing_rate(V):\n",
-    "    Q = Q_max / (1 + exp((theta-V)/sigma))\n",
+    "    Q = Q_max / (1 + exp((theta-V)/sigma)) # Postnova et al. 2018 - Table 1, Equation 7\n",
     "    return Q"
    ]
   },
@@ -211,7 +213,7 @@
    "source": [
     "# total sleep drive\n",
     "def total_sleep_drive(H,C):\n",
-    "    D_v = nu_vH*H + nu_vC*C + A_v\n",
+    "    D_v = nu_vH*H + nu_vC*C + A_v # Postnova et al. 2018 - Table 1, Equation 9\n",
     "    return D_v"
    ]
   },
@@ -221,12 +223,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Circadian drive, sleep propensity model (Postnova et al., 2016)\n",
+    "# Circadian drive, sleep propensity model\n",
     "def circadian_drive(X,Y):\n",
     "    X = np.array(X)\n",
     "    Y = np.array(Y)\n",
-    "    C = 0.1*((1+X)/2)+power(((3.1*X - 2.5*Y + 4.2)/(3.7*(X+2))),2)\n",
+    "    C = 0.1*((1+X)/2)+power(((3.1*X - 2.5*Y + 4.2)/(3.7*(X+2))),2) # Postnova et al. 2016 - Equations 1, 2, and 3\n",
     "    return C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KSS Alertness measure\n",
+    "def alertness_measure_kss(C,H):\n",
+    "    A_KSS = Theta_0_KSS + Theta_H_KSS*H + Theta_C_KSS*C # Postnova et al. 2018 - Equation 23\n",
+    "    return A_KSS"
    ]
   },
   {
@@ -236,7 +250,7 @@
    "outputs": [],
    "source": [
     "def wake_effort(Q_v):\n",
-    "    W = F_W * max(0, V_WE-nu_mv*Q_v-D_m)\n",
+    "    W = F_W * max(0, V_WE-nu_mv*Q_v-D_m) # Postnova et al. 2018 - Table 1, Equation 8\n",
     "    return W"
    ]
   },
@@ -261,15 +275,15 @@
    "outputs": [],
    "source": [
     "### Mean voltages, V_v and V_m of the VLPO and MA\n",
-    "# dV_vdt = (nu_vm*Q_m - V_v + D_v)/tau_v\n",
-    "# dV_mdt = (nu_mv*Q_v - V_m + D_m + W)/tau_m\n",
+    "# dV_vdt = (nu_vm*Q_m - V_v + D_v)/tau_v # Postnova et al. 2018 - Table 1, Equation 1\n",
+    "# dV_mdt = (nu_mv*Q_v - V_m + D_m + W)/tau_m # Postnova et al. 2018 - Table 1, Equation 2\n",
     "### Homeostatic drive\n",
-    "# dHdt = (nu_Hm*Q_m - H)/tau_H\n",
+    "# dHdt = (nu_Hm*Q_m - H)/tau_H # Postnova et al. 2018 - Table 1, Equation 3\n",
     "### circadian variables\n",
-    "# dXdt = (Y + gamma*(X/3 + power(X,3)*4/3 - power(X,7)*256/105) + nu_Xp*D_p + nu_Xn*D_n)/tau_X\n",
-    "# dYdt = (D_p*(nu_YY*Y - nu_YX*X) - power((delta/tau_C),2)*X)/tau_Y\n",
+    "# dXdt = (Y + gamma*(X/3 + power(X,3)*4/3 - power(X,7)*256/105) + nu_Xp*D_p + nu_Xn*D_n)/tau_X # Postnova et al. 2018 - Table 1, Equation 4\n",
+    "# dYdt = (D_p*(nu_YY*Y - nu_YX*X) - power((delta/tau_C),2)*X)/tau_Y # Postnova et al. 2018 - Table 1, Equation 5\n",
     "### photoreceptor activity function\n",
-    "# dPdt = alpha(I,S)*(1-P)-(beta*P)\n",
+    "# dPdt = alpha(I,S)*(1-P)-(beta*P) # Postnova et al. 2018 - Table 1, Equation 6\n",
     "\n",
     "def model(y, t):\n",
     "    V_v, V_m, H, X, Y, P = y\n",
@@ -284,14 +298,14 @@
     "    D_p = photic_drive(X, Y, P, I, S)\n",
     "    W = wake_effort(Q_v)\n",
     "    \n",
-    "    dydt = [(nu_vm*Q_m - V_v + D_v)/tau_v, # V_v\n",
-    "            (nu_mv*Q_v - V_m + D_m + W)/tau_m, # V_m\n",
-    "            (nu_Hm*Q_m - H)/tau_H, # H\n",
-    "            (Y + gamma*(X/3 + power(X,3)*4/3 - power(X,7)*256/105) + nu_Xp*D_p + nu_Xn*D_n)/tau_X, # X\n",
-    "            (D_p*(nu_YY*Y - nu_YX*X) - power((delta/tau_C),2)*X)/tau_Y, # Y\n",
-    "            alpha(I,S)*(1-P)-(beta*P)\n",
-    "           ]\n",
-    "    return dydt"
+    "    gradient_y = [(nu_vm*Q_m - V_v + D_v)/tau_v, # V_v, Postnova et al. 2018 - Table 1, Equation 1\n",
+    "                  (nu_mv*Q_v - V_m + D_m + W)/tau_m, # V_m, Postnova et al. 2018 - Table 1, Equation 2\n",
+    "                  (nu_Hm*Q_m - H)/tau_H, # H, Postnova et al. 2018 - Table 1, Equation 3\n",
+    "                  (Y + gamma*(X/3 + power(X,3)*4/3 - power(X,7)*256/105) + nu_Xp*D_p + nu_Xn*D_n)/tau_X, # X, Postnova et al. 2018 - Table 1, Equation 4\n",
+    "                  (D_p*(nu_YY*Y - nu_YX*X) - power((delta/tau_C),2)*X)/tau_Y, # Y, Postnova et al. 2018 - Table 1, Equation 5\n",
+    "                  alpha(I,S)*(1-P)-(beta*P) # P, Postnova et al. 2018 - Table 1, Equation 6\n",
+    "                 ] \n",
+    "    return gradient_y"
    ]
   },
   {
@@ -302,11 +316,12 @@
    "source": [
     "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.odeint.html\n",
     "# y0 = [0,0,0,0,0,0]\n",
+    "# initial conditions approximated after reaching some system equilibrium\n",
     "y0 = [-2.870465391131989,-0.06999999999999962,14.772935675785682,0.9725400028797555,-0.04658468834644522,2.902957297661591e-21]\n",
     "t = np.linspace(0,24*60*60,1000)\n",
     "sol = odeint(model,y0,t)\n",
     "C = circadian_drive(sol[:, 3],sol[:, 4])\n",
-    "A_KSS = Theta_0_KSS + Theta_H_KSS*sol[:, 2] + Theta_C_KSS*C"
+    "A_KSS = alertness_measure_kss(C,sol[:, 2])"
    ]
   },
   {
