--- a/run2018.ipynb
+++ b/run2018.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "input_file = pd.read_csv(folder+'input_irradiance_mel.csv', sep=\";\", decimal=\",\")\n",
     "irradiance_mel = input_file[['hours', 'irradiance_mel']]\n",
-    "illuminance = input_file[['hours', 'illuminance']]"
+    "illuminance_mel = input_file[['hours', 'illuminance_mel']]\n"
    ]
   },
   {
@@ -55,21 +55,21 @@
     "    idx = (np.abs(array - value)).argmin()\n",
     "    return idx\n",
     "\n",
-    "def irradiance(t):\n",
+    "def illuminance(t):\n",
     "    t = t/3600\n",
     "    t = t % 24\n",
     "    #print(\"Time:\",t) # for debugging\n",
     "    if ((t < 8.0) or (t > 20.0)): \n",
-    "        E_emel = 0.01\n",
+    "        IE = 40\n",
     "    elif ((t < 9.0) or (t > 16.0)): \n",
-    "        E_emel = max(irradiance_mel.irradiance_mel)\n",
+    "        IE = 250 #max(illuminance_mel.illuminance_mel)\n",
     "    else:\n",
-    "        idx = find_nearest(irradiance_mel.hours, t)\n",
-    "        E_emel = irradiance_mel.irradiance_mel[idx]\n",
+    "        idx = find_nearest(illuminance_mel.hours, t)\n",
+    "        IE = illuminance_mel.illuminance_mel[idx]\n",
     "    #print(\"Irradiance:\",E_emel) # for debugging\n",
-    "    return E_emel\n",
+    "    return IE\n",
     "\n",
-    "irradiance_v = vectorize(irradiance)"
+    "illuminance_v = vectorize(illuminance)"
    ]
   },
   {
@@ -79,12 +79,12 @@
    "outputs": [],
    "source": [
     "# initial conditions \n",
-    "# y0 = [1.5, -15.0, 13.0, 0.04, -1.28, 0.0, 0.0]\n",
-    "y0 = [-4.497078351339751, -0.07000000000052416, 13.235369640119554, -0.07243371889456507, -0.7498943126792074, 0.998695292851908, 0.0]\n",
+    "y0 = [1.5, -15.0, 13.0, 0.04, -1.28, 0.0, 0.0]\n",
+    "# y0 = [-4.497078351339751, -0.07000000000052416, 13.235369640119554, -0.07243371889456507, -0.7498943126792074, 0.998695292851908, 0.0]\n",
     "# y0 = [-3.9849559306245554, -0.06999999999999991, 13.443772572885331, -0.8152711832774777, 0.10984121127149143, 0.08493027667594716, -0.03543102672658369]\n",
     "# y0 = [2.902150366506143, -14.159798106868699, 13.299816271267845, -0.7966368638117368, 0.2637919920821084, 0.06249713611782928, -0.05188881098166024]\n",
     "# y0 = [ 1.888050284627664, -10.000676037696763, 12.547896533553217, -1.0889180236787013, -0.2654388779780049, 0.06231185031284664, -0.05499507929393252]\n",
-    "#y0 = [ 1.745102761767178, -9.50905050894146, 12.40606970294775, -1.076264422103, -0.09355980932875388, 0.056699021756750685, -0.054995079291803216]"
+    "# y0 = [ 1.745102761767178, -9.50905050894146, 12.40606970294775, -1.076264422103, -0.09355980932875388, 0.056699021756750685, -0.054995079291803216]"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "t = np.linspace(0,72*60*60,n)\n",
-    "(sol,temp) = odeint(models.model, y0, t, args = (irradiance, '2020',), full_output = True)\n",
+    "(sol,temp) = odeint(models.model, y0, t, args = (illuminance, '2018',), full_output = True)\n",
     "\n",
     "V_v = sol[:, 0]\n",
     "V_m = sol[:, 1]\n",
@@ -102,7 +102,7 @@
     "X = sol[:, 3]\n",
     "Y = sol[:, 4]\n",
     "P = sol[:, 5]\n",
-    "Theta_L = sol[:, 6]"
+    "Theta_L = sol[:, 6] # not used in the 2018 model"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "source": [
     "t_hours = t/3600\n",
     "C = models.circadian_drive_v(X,Y)\n",
-    "AM = models.alertness_measure_v(C, H, Theta_L)"
+    "AM = models.alertness_measure_v(C, H)"
    ]
   },
   {
@@ -157,8 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(output_file.time, output_file.KSS, 'b', label='KSS(t)')\n",
-    "plt.plot(t_hours, AM, 'darkorange', label='AM_KSS(t)')\n",
+    "plt.plot(output_file.time, output_file.KSS, 'b', label='KSS(t), target')\n",
+    "plt.plot(t_hours, AM, 'darkorange', label='KSS(t), computed')\n",
     "plt.legend(loc='best')\n",
     "plt.xlabel('t')\n",
     "plt.grid()\n",
@@ -171,8 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.plot(output_file.time, output_file.I_mel, 'b', label='I_mel(t)')\n",
-    "plt.plot(t_hours, irradiance_v(t), 'darkorange', label='I(t)')\n",
+    "plt.plot(output_file.time, output_file.I_mel, 'b', label='I_mel(t), target')\n",
+    "plt.plot(t_hours, illuminance_v(t), 'darkorange', label='I_mel(t), input conversion')\n",
     "plt.legend(loc='best')\n",
     "plt.xlabel('t')\n",
     "plt.grid()\n",
@@ -196,8 +196,8 @@
     "\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "color = 'tab:blue'\n",
-    "ax2.set_ylabel('Irradiance', color=color)  # we already handled the x-label with ax1\n",
-    "ax2.plot(t_hours, irradiance_v(t), color=color)\n",
+    "ax2.set_ylabel('Illuminance', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(t_hours, illuminance_v(t), color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
@@ -252,19 +252,6 @@
    "outputs": [],
    "source": [
     "plt.plot(t_hours, P, 'y', label='P(t)')\n",
-    "plt.legend(loc='best')\n",
-    "plt.xlabel('t')\n",
-    "plt.grid()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(t_hours, Theta_L, 'b', label='Theta_L(t)')\n",
     "plt.legend(loc='best')\n",
     "plt.xlabel('t')\n",
     "plt.grid()\n",
