fixed code for illuminance in sigmoid

--- a/run.ipynb
+++ b/run.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = ''"
+    "folder = '/Users/ulbrich/Library/Application Support/Tresorit/TresoritDrive/Projects/2021-02-18--Arousal-Dynamics-Model/'"
    ]
   },
   {
@@ -32,8 +32,10 @@
    "source": [
     "### Read input file\n",
     "input_file = pd.read_csv(folder+'input_irradiance_mel.csv', sep=\";\", decimal=\",\")\n",
-    "minE = min(min(input_file.irradiance_mel),0.036)\n",
-    "maxE = max(max(input_file.irradiance_mel), 0.22)"
+    "#minE = min(min(input_file.irradiance_mel),0.036)\n",
+    "#maxE = max(max(input_file.irradiance_mel), 0.22)\n",
+    "minE = 0\n",
+    "maxE = 1000 # based on the sigmoid shape, it goes to y = 1 around x = 1000"
    ]
   },
   {
@@ -85,23 +87,28 @@
     "\n",
     "### Return irradiance at time t\n",
     "def irradiance(t):\n",
+    "    # add version here to choose between illuminance and irradiance\n",
     "    t = t/3600\n",
     "    t = t % 24\n",
     "    if ((t < 8.0) or (t > 20.0)): \n",
     "        E_emel = 0.036 # from the scientist: 27 lux\n",
+    "        I_emel = 27\n",
     "    elif ((t < 9.0) or (t > 16.0)): \n",
     "        E_emel = 0.22 # from the scientist: 165 lux\n",
+    "        I_emel = 165\n",
     "    else:\n",
     "        ### original data\n",
     "        idx = find_nearest(input_file.hours, t)\n",
     "        E_emel = input_file.irradiance_mel[idx]\n",
+    "        I_emel = input_file.illuminance_mel[idx]\n",
     "        ### smoothed data (second order poly)\n",
-    "        # E_emel = input_file.irradiance_mel_smooth[idx]\n",
-    "        # idx = find_nearest(new_input.hour, t)\n",
+    "        #E_emel = input_file.irradiance_mel_smooth[idx]\n",
     "        ### aggregated by hour \"step\" data\n",
+    "        # idx = find_nearest(new_input.hour, t)\n",
     "        # E_emel = input_step.irradiance_mel[idx]\n",
     "        # E_emel = 0.22 # step\n",
     "    return E_emel\n",
+    "    #return I_emel\n",
     "\n",
     "irradiance_v = vectorize(irradiance)"
    ]
@@ -114,11 +121,11 @@
    "source": [
     "def forced_wake(t):\n",
     "    # Testing with forced wake between t1 and t2\n",
-    "    #if ((t/3600 % 24) >= 6 and (t/3600 % 24) <= 24):\n",
-    "    #    F_w = 1\n",
-    "    #else:\n",
-    "    #    F_w = 0\n",
-    "    F_w = 0\n",
+    "    if ((t/3600 % 24) >= 8 and (t/3600 % 24) <= 24):\n",
+    "        F_w = 1\n",
+    "    else:\n",
+    "        F_w = 0\n",
+    "    #F_w = 0\n",
     "    return F_w\n",
     "\n",
     "forced_wake_v = vectorize(forced_wake)"
@@ -133,13 +140,8 @@
     "#### Initial Conditions \n",
     "# [V_v, V_m, H, X, Y, P, Theta_L]\n",
     "\n",
-    "y0 = [1.5, -15.0, 13.0, 0.04, -1.28, 0.0, 0.0]\n",
-    "\n",
-    "# y0 = [-4.497078351339751, -0.07000000000052416, 13.235369640119554, -0.07243371889456507, -0.7498943126792074, 0.998695292851908, 0.0]\n",
-    "# y0 = [-3.9849559306245554, -0.06999999999999991, 13.443772572885331, -0.8152711832774777, 0.10984121127149143, 0.08493027667594716, -0.03543102672658369]\n",
-    "# y0 = [2.902150366506143, -14.159798106868699, 13.299816271267845, -0.7966368638117368, 0.2637919920821084, 0.06249713611782928, -0.05188881098166024]\n",
-    "# y0 = [ 1.888050284627664, -10.000676037696763, 12.547896533553217, -1.0889180236787013, -0.2654388779780049, 0.06231185031284664, -0.05499507929393252]\n",
-    "# y0 = [ 1.745102761767178, -9.50905050894146, 12.40606970294775, -1.076264422103, -0.09355980932875388, 0.056699021756750685, -0.054995079291803216]"
+    "# y0 = [1.5, -15.0, 13.0, 0.04, -1.28, 0.0, 0.0] # initial values from draft\n",
+    "y0 = [ -4.55, -0.07, 13.29, -0.14, -1.07, 0.10, -5.00e-06] # proper initial values after experimentation"
    ]
   },
   {
@@ -150,7 +152,8 @@
    "source": [
     "### Execute the ODE model\n",
     "t = np.linspace(0,72*60*60,n)\n",
-    "(sol,temp) = odeint(models.model, y0, t, args = (irradiance, forced_wake, minE, maxE, '2020',), full_output = True)\n",
+    "version_year = '2020'\n",
+    "(sol,temp) = odeint(models.model, y0, t, args = (irradiance, forced_wake, minE, maxE, version_year,), full_output = True)\n",
     "\n",
     "### Store results\n",
     "V_v = sol[:, 0]\n",
@@ -217,7 +220,7 @@
     "### Compute all the internal functions\n",
     "IE    = irradiance_v(t)\n",
     "S     = models.state_v(V_m) \n",
-    "alpha = models.photoreceptor_conversion_rate_v(IE, S, '2020')\n",
+    "alpha = models.photoreceptor_conversion_rate_v(IE, S, version_year)\n",
     "Q_m   = models.mean_population_firing_rate_v(V_m)\n",
     "Q_v   = models.mean_population_firing_rate_v(V_v)\n",
     "C     = models.circadian_drive_v(X,Y)\n",
@@ -226,8 +229,7 @@
     "D_p   = models.photic_drive_v(X, Y, P, alpha)\n",
     "F_w   = forced_wake_v(t)\n",
     "W     = models.wake_effort_v(Q_v, F_w)\n",
-    "#Sigmoid = ( models.sigmoid_v(IE) - models.sigmoid_v(0) ) / ( models.sigmoid_v(0.8) - models.sigmoid_v(0) )\n",
-    "Sigmoid = ( models.sigmoid_v(IE) - models.sigmoid_v(minE) ) / ( models.sigmoid_v(maxE) - models.sigmoid_v(minE) )"
+    "Sigmoid = ( models.sigmoid_v(IE, version_year) - models.sigmoid_v(minE, version_year) ) / ( models.sigmoid_v(maxE, version_year) - models.sigmoid_v(minE, version_year) )"
    ]
   },
   {
@@ -449,17 +451,30 @@
     "idx = find_nearest(t/3600, 48)\n",
     "print(\"[ {}, {}, {}, {}, {}, {}, {}]\".format(V_v[idx],V_m[idx],H[idx],X[idx],Y[idx],P[idx],Theta_L[idx]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0,10000,100)\n",
+    "y = 1/(1 + exp((0.05-x)/223.5) )\n",
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.0 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-    }
-   }
+   "name": "python390jvsc74a57bd07812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d",
+   "display_name": "Python 3.9.0 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
