--- a/validation.ipynb
+++ b/validation.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x17271b390>]"
+       "[<matplotlib.lines.Line2D at 0x1685ef250>]"
       ]
      },
      "execution_count": 3,
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "fefa672f",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "d2356830",
    "metadata": {},
    "outputs": [
